# QRGenerator

qr-gen-app/: Cargo.toml  index.html
qr-gen-app/src/: generator.rs  main.rs
qrgen/: Cargo.toml  index.html
qrgen/src/: generator.rs  main.rs
