[package]
name = "qrgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = { version = "0.2.9", features = ["js"] }
leptos = "0.3.0"
qrcodegen = "1.8.0"
rand = {version = "0.8.5", features = ["getrandom"]}
wasm-bindgen = "0.2.86"